--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>2.0.0</version>
   </parent>
   <description>ETHZ-03-02-01 Map of b0 changes</description>
-  <version>0.5</version>
+  <version>0.6-SNAPSHOT</version>
   <properties>
     <summary>ETHZ-03-02-01 Map of b0 changes</summary>
     <description>ETHZ-03-02-01 Map of b0 changes</description>
