--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
                     <require>snap6</require>
                   </requires>
                   <postinstallScriptlet combine.self="override">
-                    <script>conda update conda -y &amp;&amp; conda install -y --file /application/dependencies/python/packages.list &amp;&amp; cp /application/notebook/etc/snappy.ini /opt/anaconda/lib/python2.7/site-packages/snappy/snappy.ini &amp;&amp; cp /application/notebook/etc/snap.auxdata.properties /opt/snap6/etc/snap.auxdata.properties</script>
+                    <script>conda update conda -y &amp;&amp; conda install -y --file /application/dependencies/python/packages.list &amp;&amp; cp /application/notebook/etc/snappy.ini /opt/anaconda/lib/python2.7/site-packages/snappy/snappy.ini</script>
                   </postinstallScriptlet>
                 </configuration>
               </execution>
